--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,8 +78,8 @@ if( NOT MSVC )
         DESTINATION include/${PROJECT_NAME}
     )
 endif()
-
 if (NOT supress_show_info)
+    message(STATUS "${PROJECT_NAME}")
     list_to_string("${compile_defs}" compile_defs_str)
     message(STATUS "Compile Definitions: ${compile_defs_str}")
     list_to_string("${compile_opts}" compile_opts_str)
