added skip install option

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,7 +64,9 @@ set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER "aRibeiro")
 target_compile_definitions(${PROJECT_NAME} PUBLIC ${compile_defs})
 target_compile_options(${PROJECT_NAME} PUBLIC ${compile_opts})
 
-if( NOT MSVC )
+option(ARIBEIRO_SKIP_INSTALL_PLATFORM OFF)
+
+if( NOT MSVC AND NOT ARIBEIRO_SKIP_INSTALL_PLATFORM )
     # Install setup
     install(
         TARGETS ${PROJECT_NAME} 
