--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,7 +56,7 @@ else()
     message(FATAL_ERROR "Platform not tested error")
 endif()
 
-target_link_libraries(${PROJECT_NAME} PUBLIC ${TARGET_LIBS})
+target_link_libraries(${PROJECT_NAME} PUBLIC aRibeiroCore ${TARGET_LIBS})
 
 # set the target's folder (for IDEs that support it, e.g. Visual Studio)
 set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER "aRibeiro")
